# hostel-by-pass

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml
doc/eng/: README.md
doc/pt-br/: README.md
src/: main.rs
src/controller/: create_reservation.rs  get_reservation_by_date.rs  get_reservation_by_email.rs  get_reservation_check_in_date.rs  get_reservation_check_out_date.rs  get_reservation_email.rs  mod.rs
src/entities/: mod.rs  reservation.rs
src/entity/: check_in_date.rs  check_out_date.rs  email_reservation.rs  mod.rs  reservation.rs  status_reservation.rs
src/helper/: fallback.rs  message_json.rs  mod.rs
src/helpers/: fallback.rs  mod.rs
src/repository/: mod.rs  reservation_repository.rs
src/route/: routes.rs
src/service/: database.rs  email.rs  mod.rs
